<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <Preference
        android:key="goal"
        android:title="@string/goal" />
    <Preference
        android:key="stepsize"
        android:title="@string/step_size" />
    <Preference
        android:key="account"
        android:summary="@string/sign_in"
        android:title="@string/account" />

    <!-- <CheckBoxPreference -->
    <!-- android:defaultValue="true" -->
    <!-- android:key="notification" -->
    <!-- android:summary="WARNING: Due to a bug in Android 4.4.2, the app might not reliably count your steps without the notification!" -->
    <!-- android:title="@string/notification" /> -->

    <Preference
        android:key="export"
        android:summary="@string/export_summary"
        android:title="@string/export_title" />
    <Preference
        android:key="import"
        android:summary="@string/import_summary"
        android:title="@string/import_title" />

</PreferenceScreen>